--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -9,5 +9,5 @@
 <% else %>
   <p>The letters in <strong><%= @word %></strong> don't all come from <%= @letters.join(", ") %></p>
 <% end %>
-<%= link_to "Play again?", new_path %>
+<%= link_to "Play again?", root_path %>
 </div>
