--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -15,6 +15,7 @@ h1, h2 {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  align-items: center;
 }
 
 .letters {
@@ -28,6 +29,7 @@ h1, h2 {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     padding: 4px 12px;
     display: inline;
+    border-radius: 50%
   }
 }
 
