--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
-<h1>Make a word</h1>
+<h1>Find a word</h1>
 <ul class="letters">
   <% @letters.each do |letter| %>
     <li><%= letter %></li>
   <% end %>
 </ul>
-<h2>Can you make an English word from these letters?</h2>
+<h2>Can you find an English word among these letters?</h2>
 <form action="/score" method="POST" class="form-inline">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= hidden_field_tag :letters, @letters %>
