--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -36,7 +36,7 @@ h1, h2 {
     background-color: blue;
     color: white;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    padding: 4px 12px;
+    padding: 10px;
     display: inline;
     border-radius: 50%
   }
