--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -28,7 +28,6 @@ h1, h2 {
   align-items: center;
 }
 .letters {
-  padding: 5px;
   font-size: 24px;
   list-style: none;
   font-family: monospace;
@@ -36,9 +35,9 @@ h1, h2 {
     background-color: blue;
     color: white;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    padding: 10px;
+    padding: 5px 10px;
     display: inline;
-    border-radius: 50%
+    border-radius: 50%;
   }
 }
 
